--- a/.cordova/config.json
+++ b/.cordova/config.json
@@ -1,7 +1,7 @@
 {
     "lib": {
         "www": {
-            "id": "com.example.hello2",
+            "id": "com.example.green",
             "version": "3.5.0",
             "uri": "https://github.com/phonegap/phonegap-app-hello-world/archive/3.5.0.tar.gz"
         }
